--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,12 @@
-.container {
-  display: grid;
-  grid-template-columns: 1;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid red;
+@keyframes slide {
+  from {
+    background-position: 0;
+  }
+  to {
+    background-position: 5120px;
+  }
+}
+
+#bg {
+  animation: slide 150s linear infinite;
 }
