--- a/src/components/PokeCard.module.css
+++ b/src/components/PokeCard.module.css
@@ -1,27 +1,30 @@
 .container {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 241px;
+  height: 335px;
 }
 
 .front {
-  z-index: -1;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  z-index: 1;
   position: absolute;
-  border: 1px solid gold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   background: linear-gradient(rgba(199, 88, 199, 1), #2d6fcc);
-  text-align: center;
   text-transform: uppercase;
   font-weight: 400;
   font-family: monospace;
   font-size: 1.2rem;
   color: aliceblue;
   user-select: none;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .facedown {
@@ -33,20 +36,13 @@
 }
 
 .back {
-  transition: all .2s;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   position: absolute;
+  top: 0;
+  right: 0;
+  width: 241px;
+  height: 335px;
+  transition: all 0.2s;
   user-select: none;
-  border: 1px solid gold;
   border-radius: 10px;
-  background: linear-gradient(rgba(211, 82, 26, 1), #e0ac52);
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 400;
-  font-family: monospace;
-  font-size: 1.2rem;
-  color: aliceblue;
+  background: url("/pokecard.png");
 }
