--- a/src/components/screens/PlayersScreen.module.css
+++ b/src/components/screens/PlayersScreen.module.css
@@ -11,7 +11,18 @@
 
 .card-container {
   display: flex;
-  gap: 3rem;
+  gap: 4rem;
   justify-items: center;
   align-items: center;
+}
+
+.card-content {
+  width: 30px;
+  height: 30px;
+  z-index: 10;
+}
+
+.card-images {
+  width: 75px;
+  z-index: 10;
 }
