--- a/src/components/screens/PlayersSelectionScreen.module.css
+++ b/src/components/screens/PlayersSelectionScreen.module.css
@@ -26,3 +26,9 @@
   width: 75px;
   z-index: 10;
 }
+
+.card-container-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
